<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="@id/layout"
        app:layout_constraintLeft_toLeftOf="@id/layout"
        app:layout_constraintRight_toRightOf="@id/layout"
        app:layout_constraintBottom_toTopOf="@id/userPassword"

        android:hint="@string/userId"
        android:autofillHints="username"
        android:inputType="text"
        android:padding="8dp"
        android:background="@drawable/rectangle"

        android:id="@+id/userId"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/userId"
        app:layout_constraintLeft_toLeftOf="@id/layout"
        app:layout_constraintRight_toRightOf="@id/layout"
        app:layout_constraintBottom_toTopOf="@id/rememberCheckBox"

        android:hint="@string/userPassword"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:background="@drawable/rectangle"

        android:id="@+id/userPassword" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/userPassword"
        app:layout_constraintLeft_toLeftOf="@id/layout"
        app:layout_constraintRight_toRightOf="@id/layout"
        app:layout_constraintBottom_toTopOf="@id/connexionButton"

        android:text="@string/remember_check_box"

        android:id="@+id/rememberCheckBox"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="@id/layout"
        app:layout_constraintRight_toRightOf="@id/layout"
        app:layout_constraintBottom_toBottomOf="@id/layout"

        android:text="@string/connexionButton"
        android:paddingBottom="8dp"

        android:id="@+id/connexionButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>