<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="@id/layout"
        app:layout_constraintBottom_toTopOf="@id/ImageViewer"
        app:layout_constraintRight_toRightOf="@id/layout"
        app:layout_constraintLeft_toLeftOf="@id/layout"

        android:id="@+id/InterventionName"

        android:hint="@string/InterventionName"
        android:autofillHints="name"
        android:inputType="text"
        android:padding="8dp"
        android:background="@drawable/rectangle"
    />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/InterventionName"
        app:layout_constraintBottom_toTopOf="@id/FileSearchButton"
        app:layout_constraintRight_toRightOf="@id/layout"
        app:layout_constraintLeft_toLeftOf="@id/layout"

        android:id="@+id/ImageViewer"

        android:maxHeight="300dp"
        android:maxWidth="150dp"
        android:contentDescription="@string/image_viewer"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/InterventionName"
        app:layout_constraintBottom_toTopOf="@id/ImageArrowRight"
        app:layout_constraintRight_toRightOf="@id/layout"
        app:layout_constraintLeft_toRightOf="@id/ImageViewer"

        android:id="@+id/ImageNumber"

        android:text="@string/image_number_number"
        android:textSize="50sp"
        android:padding="8dp"
        android:background="@drawable/rectangle"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/ImageArrowRight"
        app:layout_constraintBottom_toTopOf="@id/FileSearchButton"
        app:layout_constraintRight_toRightOf="@id/layout"
        app:layout_constraintLeft_toRightOf="@id/ImageViewer"

        android:id="@+id/ImageCross"

        android:visibility="invisible"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/red_cross"
        android:contentDescription="@string/image_cross"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/ImageNumber"
        app:layout_constraintBottom_toTopOf="@id/ImageCross"
        app:layout_constraintRight_toRightOf="@id/layout"
        app:layout_constraintLeft_toRightOf="@id/ImageViewer"

        android:id="@+id/ImageArrowRight"


        android:visibility="invisible"
        android:background="@android:color/transparent"
        android:src="@drawable/arrow_right"
        android:contentDescription="@string/image_arrow_right"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/ImageNumber"
        app:layout_constraintBottom_toTopOf="@id/ImageCross"
        app:layout_constraintRight_toLeftOf="@id/ImageViewer"
        app:layout_constraintLeft_toLeftOf="@id/layout"

        android:id="@+id/ImageArrowLeft"


        android:visibility="invisible"
        android:background="@android:color/transparent"
        android:src="@drawable/arrow_left"
        android:contentDescription="@string/image_arrow_left"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/InterventionName"
        app:layout_constraintBottom_toTopOf="@id/ImageArrowLeft"
        app:layout_constraintRight_toLeftOf="@id/ImageViewer"
        app:layout_constraintLeft_toLeftOf="@id/layout"

        android:id="@+id/ImageRecycleBin"

        android:visibility="invisible"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/recycle_bin"
        android:contentDescription="@string/image_recycle_bin"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/ImageArrowLeft"
        app:layout_constraintBottom_toTopOf="@id/FileSearchButton"
        app:layout_constraintRight_toLeftOf="@id/ImageViewer"
        app:layout_constraintLeft_toLeftOf="@id/layout"

        android:id="@+id/cameraButton"

        android:background="?android:selectableItemBackground"
        android:src="@drawable/camera"
        android:contentDescription="@string/camera_button"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/ImageViewer"
            app:layout_constraintBottom_toTopOf="@id/Send"
            app:layout_constraintRight_toRightOf="@id/layout"
            app:layout_constraintLeft_toLeftOf="@id/layout"

            android:id="@+id/FileSearchButton"
            />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/Send"

        app:layout_constraintBottom_toBottomOf="@id/layout"
        app:layout_constraintRight_toRightOf="@id/layout"
        app:layout_constraintLeft_toLeftOf="@id/layout"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="@+id/Send"
            app:layout_constraintBottom_toBottomOf="@id/Send"
            app:layout_constraintRight_toLeftOf="@id/SendWithoutTest"
            app:layout_constraintLeft_toLeftOf="@id/Send"

            android:id="@+id/SendButton"
            android:layout_marginBottom="15dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="@+id/Send"
            app:layout_constraintBottom_toBottomOf="@id/Send"
            app:layout_constraintRight_toRightOf="@id/Send"
            app:layout_constraintLeft_toRightOf="@id/SendButton"

            android:id="@+id/SendWithoutTest"
            android:layout_marginBottom="15dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>